# 86-vibe-cli

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: cli-implementation.mdc
src/vibe/: __init__.py  version.py
src/vibe/bootstrap/: __init__.py  exceptions.py  models.py  service.py  state.py
src/vibe/cli/: __init__.py  app.py  application.py  confirmation.py  context.py  errors.py  execution.py  exit_codes.py  invocation.py  main.py  requirements.py  version.py
src/vibe/configuration/: __init__.py  environment.py  exceptions.py  loader.py  merger.py  models.py  service.py  validator.py
src/vibe/lifecycle/: __init__.py  dependency.py  events.py  exceptions.py  health.py  manager.py  metadata.py  models.py  state.py
src/vibe/logging/: __init__.py  correlation.py  exceptions.py  formatters.py  handlers.py  levels.py  logger.py  models.py  redaction.py  service.py
src/vibe/registry/: __init__.py  descriptor.py  exceptions.py  metadata.py  names.py  service.py
src/vibe/repository/: __init__.py  artifacts.py  cache.py  classification.py  discovery.py  documents.py  errors.py  git.py  models.py  paths.py  protocols.py  service.py  validation.py
tests/: conftest.py  test_bootstrap_service.py  test_cli.py  test_configuration_service.py  test_logging_service.py
tests/helpers/: repository.py
tests/integration/bootstrap/: test_bootstrap_integration.py
tests/integration/cli/: test_cli_bootstrap.py  test_cli_entry_point.py  test_cli_invocation.py
tests/integration/config/: test_configuration_service.py
tests/unit/bootstrap/: test_bootstrap_service.py  (+2 more)
(+49 files in other folders)
