[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-cli"
version = "0.1.0"
description = "86-vibe platform command-line interface"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "ThePorange" }]
dependencies = [
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
86vibe = "vibe.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe"]

[tool.hatch.build.targets.sdist]
include = ["src/vibe", "tests", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
